@@ -468,6 +468,19 @@ rpmds_Ldconfig(rpmdsObject * s)
     return (PyObject *) rpmds_Wrap( P );
 }
 
+static PyObject *
+rpmds_Uname(rpmdsObject * s)
+	/*@*/
+{
+    rpmds ds = NULL;
+    int xx;
+
+    /* XXX check return code, permit arg (NULL uses system default). */
+    xx = rpmdsUname(&ds, NULL);
+
+    return (PyObject *) rpmds_Wrap( ds );
+}
+
 #ifdef	NOTYET
 static PyObject *
 rpmds_Compare(rpmdsObject * s, PyObject * args, PyObject * kwds)
@@ -557,6 +570,8 @@ The current index in ds is positioned at overlapping member upon success.\n" },
 	"ds.Getconf -> nds	- Return getconf(1) dependency set.\n"},
  {"Ldconfig",	(PyCFunction)rpmds_Ldconfig,	METH_NOARGS|METH_STATIC,
 	"ds.Ldconfig -> nds	- Return /etc/ld.so.cache dependency set.\n"},
+ {"Uname",	(PyCFunction)rpmds_Uname,	METH_NOARGS|METH_STATIC,
+	"ds.Uname -> nds	- Return uname(2) dependency set.\n"},
 #ifdef	NOTYET
  {"Compare",	(PyCFunction)rpmds_Compare,	METH_VARARGS|METH_KEYWORDS,
 	NULL},
